# Credit-Default-Swaps

./: .gitignore  ADLER_Real_Estate_Data.xlsx  CDS_Spread_From_components.xlsx  README.md  Spreads_lib_day_US  cds_engine.py  cds_pricing.py  cds_pricing_functions.py  correlation_analysis.py  index_from_components.py  main.py  pd_table.py  pyproject.toml  requirements.txt
cds/analysis/: index_spread_from_rating.py  liberation_day.ipynb  liberation_day_us.ipynb
cds/api/: fred_st_louis.py  yahoo_finance.py
cds/correlation/: correlation_analysis.py  gaussian_copula.py
cds/data/: build_portfolio.py  rating_data.json  timeserieItems.xlsx
cds/default_correlation/: clustered_defaults.ipynb  maximum_likelihood.ipynb
cds/pricing/: cds_engine.py  cds_pricing_functions.py  index_spread_from_rating.py  pd_table.py
scripts/: basis_analysis.py
